--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectName=rpe :: expressjs-template
-sonar.projectKey=rpe-expressjs-template
+sonar.projectName=ctf :: frontend
+sonar.projectKey=ctf-frontend
 sonar.language=typescript
 sonar.sources=src/main
 sonar.tests=src/test
