--- a/charts/fact-frontend/Chart.yaml
+++ b/charts/fact-frontend/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 appVersion: "1.0"
-description: A Helm chart for ctf-frontend App
-name: ctf-frontend
-home: https://github.com/hmcts/ctf-frontend
+description: A Helm chart for fact-frontend App
+name: fact-frontend
+home: https://github.com/hmcts/fact-frontend
 version: 0.0.1
 dependencies:
   - name: nodejs
