--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectName=ctf :: frontend
-sonar.projectKey=ctf-frontend
+sonar.projectName=fact :: frontend
+sonar.projectKey=fact-frontend
 sonar.language=typescript
 sonar.sources=src/main
 sonar.tests=src/test
