setting up cucumber js

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:coverage": "jest --coverage",
     "test:routes": "jest -c jest.routes.config.js",
     "test:a11y": "jest -c jest.a11y.config.js --maxWorkers 15",
+    "test:e2e": "./node_modules/.bin/cucumber-js src/test/e2e/features/ -r src/test/e2e/steps/",
     "sonar-scan": "sonar-scanner",
     "test:smoke": "echo 'TODO add smoke tests' && exit 1",
     "test:functional": "echo 'TODO add functional tests' && exit 1",
@@ -69,6 +70,7 @@
     "chai-as-promised": "^7.1.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "cucumber": "^6.0.5",
     "debug": "^4.1.1",
     "eslint": "^6.8.0",
     "html-webpack-plugin": "^3.2.0",
