--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:coverage": "jest --coverage",
     "test:routes": "jest -c jest.routes.config.js",
     "test:a11y": "jest -c jest.a11y.config.js --maxWorkers 15",
-    "test:e2e": "./node_modules/.bin/cucumber-js src/test/e2e/features/ -r src/test/e2e/steps/",
+    "test:e2e": "cucumber-js",
     "sonar-scan": "sonar-scanner",
     "test:smoke": "jest -c jest.smoke.config.js",
     "test:functional": "echo 'TODO add functional tests'",
@@ -68,11 +68,13 @@
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chromedriver": "^85.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "cucumber": "^6.0.5",
     "debug": "^4.1.1",
     "eslint": "^6.8.0",
+    "geckodriver": "^1.20.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^25.1.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -83,6 +85,7 @@
     "request": "^2.88.0",
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2",
+    "selenium-webdriver": "^4.0.0-alpha.7",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
     "sonar-scanner": "^3.1.0",
