--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "@babel/preset-env": "^7.8.4",
     "@types/chai-as-promised": "^7.1.1",
     "@types/copy-webpack-plugin": "^5.0.0",
+    "@types/cucumber": "^6.0.1",
     "@types/jest": "^25.1.3",
     "@types/mini-css-extract-plugin": "^0.9.1",
+    "@types/selenium-webdriver": "^4.0.9",
     "@types/supertest": "^2.0.8",
     "@types/webpack-dev-middleware": "^3.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
