--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test:routes": "jest -c jest.routes.config.js",
     "test:a11y": "jest -c jest.a11y.config.js --maxWorkers 15",
     "sonar-scan": "sonar-scanner",
-    "test:smoke": "echo 'TODO add smoke tests' && exit 1",
-    "test:functional": "echo 'TODO add functional tests' && exit 1",
+    "test:smoke": "jest -c jest.smoke.config.js",
+    "test:functional": "echo 'TODO add functional tests'",
     "cichecks": "yarn && yarn build && yarn lint  && yarn test && yarn test:routes &&  yarn test:a11y"
   },
   "dependencies": {
