--- a/charts/fact-frontend/values.yaml
+++ b/charts/fact-frontend/values.yaml
@@ -1,6 +1,6 @@
 nodejs:
   applicationPort: 3100
   aadIdentityName: fact
-  ingressHost: fact-frontend.{{ .Values.global.environment }}.platform.hmcts.net
+  ingressHost: fact.{{ .Values.global.environment }}.platform.hmcts.net
   image: 'hmctspublic.azurecr.io/fact/frontend:latest'
   environment:
