--- a/package.json
+++ b/package.json
@@ -69,12 +69,12 @@
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chromedriver": "^85.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "cucumber": "^6.0.5",
     "debug": "^4.1.1",
     "eslint": "^6.8.0",
-    "geckodriver": "^1.20.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^25.1.0",
     "mini-css-extract-plugin": "^0.9.0",
