--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@types/chai-as-promised": "^7.1.1",
+    "@types/chromedriver": "^81.0.0",
     "@types/copy-webpack-plugin": "^5.0.0",
     "@types/cucumber": "^6.0.1",
     "@types/jest": "^25.1.3",
@@ -69,12 +70,12 @@
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chromedriver": "^85.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "cucumber": "^6.0.5",
     "debug": "^4.1.1",
     "eslint": "^6.8.0",
-    "geckodriver": "^1.20.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^25.1.0",
     "mini-css-extract-plugin": "^0.9.0",
