--- a/package.json
+++ b/package.json
@@ -55,12 +55,11 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@types/chai-as-promised": "^7.1.1",
-    "@types/chromedriver": "^81.0.0",
     "@types/copy-webpack-plugin": "^5.0.0",
     "@types/cucumber": "^6.0.1",
     "@types/jest": "^25.1.3",
     "@types/mini-css-extract-plugin": "^0.9.1",
-    "@types/selenium-webdriver": "^4.0.9",
+    "@types/puppeteer": "^3.0.2",
     "@types/supertest": "^2.0.8",
     "@types/webpack-dev-middleware": "^3.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
@@ -70,7 +69,6 @@
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chromedriver": "^85.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "cucumber": "^6.0.5",
@@ -83,10 +81,10 @@
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
     "pa11y": "^5.3.0",
+    "puppeteer": "^5.2.1",
     "request": "^2.88.0",
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2",
-    "selenium-webdriver": "^4.0.0-alpha.7",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
     "sonar-scanner": "^3.1.0",
