--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "yarn webpack --config webpack.config.js",
     "build:prod": " yarn webpack --mode production --config webpack.config.js",
     "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage -c jest.coverage.config.js",
     "test:routes": "jest -c jest.routes.config.js",
     "test:a11y": "jest -c jest.a11y.config.js --maxWorkers 15",
     "sonar-scan": "sonar-scanner",
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.2",
     "@types/glob": "^7.1.3",
     "@types/helmet": "^0.0.45",
+    "@types/i18next": "^13.0.0",
     "@types/node": "^13.7.0",
     "@types/nunjucks": "^3.1.3",
     "@types/require-directory": "^2.1.1",
@@ -43,6 +44,8 @@
     "glob": "^7.1.6",
     "govuk-frontend": "^3.5.0",
     "helmet": "^3.21.2",
+    "i18next": "^19.7.0",
+    "i18next-http-middleware": "^3.0.5",
     "jquery": "^3.5.0",
     "nunjucks": "^3.2.0",
     "require-directory": "^2.1.1",
