--- a/charts/fact-frontend/values.preview.template.yaml
+++ b/charts/fact-frontend/values.preview.template.yaml
@@ -1,6 +1,6 @@
 nodejs:
   environment:
-    FACT_API_URL: http://fact-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+    FACT_API_URL:
   # Don't modify below here
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
