--- a/charts/fact-frontend/Chart.yaml
+++ b/charts/fact-frontend/Chart.yaml
@@ -1,6 +1,10 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: "1.0"
 description: A Helm chart for fact-frontend App
 name: fact-frontend
 home: https://github.com/hmcts/fact-frontend
 version: 0.0.3
+dependencies:
+  - name: nodejs
+    version: 2.0.1
+    repository: '@hmctspublic'
