--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "@types/nunjucks": "^3.1.3",
     "@types/require-directory": "^2.1.1",
     "@types/serve-favicon": "^2.5.0",
+    "autobind-decorator": "^2.4.0",
+    "awilix": "^4.2.6",
     "config": "^3.2.5",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-nunjucks": "^2.2.5",
-    "glob": "^7.1.6",
     "govuk-frontend": "^3.9.0",
     "helmet": "^3.21.2",
     "i18next": "^19.7.0",
