--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "build:prod": " yarn webpack --mode production --config webpack.config.js",
     "test": "jest",
     "test:coverage": "jest --coverage -c jest.coverage.config.js",
-    "test:routes": "jest -c jest.routes.config.js",
     "test:a11y": "jest -c jest.a11y.config.js --maxWorkers 15",
     "sonar-scan": "sonar-scanner",
     "test:smoke": "jest -c jest.smoke.config.js",
     "test:functional": "cucumber-js",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
-    "cichecks": "yarn && yarn build && yarn lint  && yarn test && yarn test:routes &&  yarn test:a11y"
+    "cichecks": "yarn && yarn build && yarn lint  && yarn test && yarn test:a11y"
   },
   "dependencies": {
     "@hmcts/info-provider": "^1.0.0",
