--- a/charts/fact-frontend/values.yaml
+++ b/charts/fact-frontend/values.yaml
@@ -5,3 +5,4 @@ nodejs:
   image: 'hmctspublic.azurecr.io/fact/frontend:latest'
   environment:
     FACT_API_URL: "http://fact-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
+    IMAGE_BASE_URL: "https://fact{{ .Values.global.environment }}.blob.core.windows.net/images/"
