--- a/config/default.yaml
+++ b/config/default.yaml
@@ -9,6 +9,9 @@ services:
   api:
     name: 'FACT API'
     url: 'http://localhost:8080'
+  image-store:
+    name: 'Image Store'
+    url: 'https://factaat.blob.core.windows.net/images'
 health:
   timeout: 5000
   deadline: 15000
