--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:a11y": "jest -c jest.a11y.config.js --maxWorkers 15",
     "sonar-scan": "sonar-scanner",
     "test:smoke": "jest -c jest.smoke.config.js",
-    "test:functional": "cucumber-js --parallel=8",
+    "test:functional": "NODE_TLS_REJECT_UNAUTHORIZED=0 cucumber-js --parallel=8",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
     "cichecks": "yarn && yarn build && yarn lint  && yarn test && yarn test:a11y"
   },
