--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hmcts/info-provider": "^1.0.0",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/nodejs-logging": "^3.0.1",
+    "@hmcts/properties-volume": "^0.0.9",
     "@types/config": "^0.0.36",
     "@types/cookie-parser": "^1.4.2",
     "@types/csurf": "^1.9.36",
@@ -32,11 +33,13 @@
     "@types/glob": "^7.1.3",
     "@types/helmet": "^0.0.45",
     "@types/i18next": "^13.0.0",
+    "@types/lodash": "^4.14.162",
     "@types/node": "^13.7.0",
     "@types/nunjucks": "^3.1.3",
     "@types/require-directory": "^2.1.1",
     "@types/serve-favicon": "^2.5.0",
     "axios": "^0.20.0",
+    "applicationinsights": "^1.8.7",
     "autobind-decorator": "^2.4.0",
     "awilix": "^4.2.6",
     "config": "^3.2.5",
@@ -49,6 +52,7 @@
     "i18next": "^19.7.0",
     "i18next-http-middleware": "^3.0.5",
     "jquery": "^3.5.0",
+    "lodash": "^4.17.20",
     "nunjucks": "^3.2.0",
     "require-directory": "^2.1.1",
     "serve-favicon": "^2.5.0",
