Ctf 45 view details (#55)
* BDD

* including stubs for court details

* including court details page

* fixing stub

* adding more to the frontend

* including contacts and telephone

* cleaning up formatting

* cleaning up api and test

* cleaning up html

* scss and setting webpack to correct css file

* test clean up

* test clean up

* correct test

* updating html

* updating html

* unit test

* puas update

* include enquiries object

* clean up

* removing puas

* test clean up

* clean up

* clean up stub data

* clean up address

* fixing the locales file and using them in html

* linting issues

* dx numbers being an array in html

* replacing variables in string with calculated values

* splitting html to in person and not in person

* clean up on in person building facility message

* changing layout to the story structure

* clean up

* html clean up

* not in person telephone business logic

* html clean up

* html clean up

* scss lint fix

* test fix

* image url fix

* Bumping chart version

* fix lint issue

* update court details data for stub api

* pr fix

* unit test clean up

* fix css and js for webpack

* Add welsh templates

* Fix display of service type without link

* Update stub data to include info and urgent info values

* change text

* cleaning up styles

* cleaning up styles (2)

* update allowed image domains

* Bumping chart version

Co-authored-by: hmcts-jenkins-fact <70752922+hmcts-jenkins-fact[bot]@users.noreply.github.com>
Co-authored-by: Nigel Dunne <12184413+nigeldunne@users.noreply.github.com>
Co-authored-by: Shaun Francis <shaun.francis1@hmcts.net>
Co-authored-by: Linus Norton <linusnorton@gmail.com>
Co-authored-by: Jenkins <nobody@nowhere>

--- a/charts/fact-frontend/values.yaml
+++ b/charts/fact-frontend/values.yaml
@@ -10,3 +10,4 @@ nodejs:
   image: 'hmctspublic.azurecr.io/fact/frontend:latest'
   environment:
     FACT_API_URL: "http://fact-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
+    IMAGE_BASE_URL: "https://fact{{ .Values.global.environment }}.blob.core.windows.net/images/"
