--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "build:prod": " yarn webpack --mode production --config webpack.config.js",
     "test": "jest",
     "test:coverage": "jest --coverage -c jest.coverage.config.js",
-    "test:a11y": "jest -c jest.a11y.config.js --maxWorkers 15",
+    "test:a11y": "echo 'nope' && exit 0",
+    "test:pa11y": "NODE_TLS_REJECT_UNAUTHORIZED=0 jest -c jest.a11y.config.js --maxWorkers 15",
+    "test:cucumber": "NODE_TLS_REJECT_UNAUTHORIZED=0 cucumber-js --parallel=8",
     "sonar-scan": "sonar-scanner",
     "test:smoke": "jest -c jest.smoke.config.js",
-    "test:functional": "NODE_TLS_REJECT_UNAUTHORIZED=0 cucumber-js --parallel=8",
+    "test:functional": "yarn test:cucumber && yarn test:pa11y",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
-    "cichecks": "yarn && yarn build && yarn lint  && yarn test && yarn test:a11y"
+    "cichecks": "yarn && yarn build && yarn lint && yarn test"
   },
   "dependencies": {
     "@hmcts/info-provider": "^1.0.0",
