update sonar paths

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectName=fact :: frontend
 sonar.projectKey=fact-frontend
 sonar.language=typescript
-sonar.sources=src/main
+sonar.sources=src/main/controllers,src/main/utils
 sonar.tests=src/test
 sonar.test.exclusions=test/coverage/**
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
