--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:a11y": "jest -c jest.a11y.config.js --maxWorkers 15",
     "sonar-scan": "sonar-scanner",
     "test:smoke": "jest -c jest.smoke.config.js",
-    "test:functional": "cucumber-js",
+    "test:functional": "NODE_TLS_REJECT_UNAUTHORIZED=0 cucumber-js --parallel=8",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
     "cichecks": "yarn && yarn build && yarn lint  && yarn test && yarn test:a11y"
   },
@@ -32,6 +32,7 @@
     "@types/express": "^4.17.2",
     "@types/glob": "^7.1.3",
     "@types/helmet": "^0.0.45",
+    "@types/http-proxy-middleware": "^0.19.3",
     "@types/i18next": "^13.0.0",
     "@types/lodash": "^4.14.162",
     "@types/node": "^13.7.0",
@@ -42,6 +43,7 @@
     "applicationinsights": "^1.8.7",
     "autobind-decorator": "^2.4.0",
     "awilix": "^4.2.6",
+    "axios": "^0.20.0",
     "config": "^3.2.5",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.11.0",
@@ -49,6 +51,7 @@
     "express-nunjucks": "^2.2.5",
     "govuk-frontend": "^3.9.0",
     "helmet": "^3.21.2",
+    "http-proxy-middleware": "^1.0.6",
     "i18next": "^19.7.0",
     "i18next-http-middleware": "^3.0.5",
     "jquery": "^3.5.0",
