--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=src/main/controllers,src/main/utils
 sonar.tests=src/test
 sonar.test.exclusions=test/coverage/**
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.exclusions=src/main/app.ts,src/main/development.ts,src/main/index.js,src/main/server.ts
+sonar.exclusions=src/main/app.ts,src/main/development.ts,src/main/modules/**/*.ts,src/main/server.ts
