FACT-59: Fix html.

--- a/api/areasOfLaw.json
+++ b/api/areasOfLaw.json
@@ -4,7 +4,7 @@
     "description": "Money claims, rent or mortgage disputes, bankruptcy, job disputes related to pay, appealing a tax or benefits decision."
   },
   {
-    "name": "Probate divorce or ending civil partnerships",
+    "name": "Probate, divorce or ending civil partnerships",
     "description": "Probate application and disputes, divorce, ending a civil partnership."
   },
   {
