--- a/charts/fact-frontend/values.yaml
+++ b/charts/fact-frontend/values.yaml
@@ -16,3 +16,4 @@ nodejs:
   environment:
     FACT_API_URL: "http://fact-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
     IMAGE_BASE_URL: "https://fact{{ .Values.global.environment }}.blob.core.windows.net/images/"
+    AS: two-cores
