--- a/charts/fact-frontend/values.yaml
+++ b/charts/fact-frontend/values.yaml
@@ -1,5 +1,7 @@
 nodejs:
   applicationPort: 3100
+  memoryRequests: "512Mi"
+  cpuRequests: "100m"
   aadIdentityName: fact
   keyVaults:
     fact:
@@ -8,7 +10,6 @@ nodejs:
         - AppInsightsInstrumentationKey
   ingressHost: fact.{{ .Values.global.environment }}.platform.hmcts.net
   image: 'hmctspublic.azurecr.io/fact/frontend:latest'
-  cpuRequests: 50m
   autoscaling:        # Default is false
     enabled: true 
     maxReplicas: 5    # Required setting
