--- a/charts/fact-frontend/values.yaml
+++ b/charts/fact-frontend/values.yaml
@@ -1,6 +1,7 @@
 nodejs:
   applicationPort: 3100
   memoryRequests: 512Mi
+  devcpuRequests: 50m
   cpuRequests: 50m
   aadIdentityName: fact
   keyVaults:
