Fact 96 - logic implemented

--- a/api/service-areas.json
+++ b/api/service-areas.json
@@ -1,8 +1,8 @@
 [
   {
-    "name": "Divorce",
+    "name": "Probate",
     "description": "Ending a marriage, getting a legal separation or help with money, property and children during a divorce.",
-    "slug": "divorce",
+    "slug": "probate",
     "serviceAreaType": "Family",
     "serviceAreaCourts": [
       {
