--- a/api/service-areas.json
+++ b/api/service-areas.json
@@ -9,22 +9,19 @@
         "slug": "bury-st-edmunds-regional-divorce-centre",
         "catchmentType": "regional",
         "courtName": "Bury St Edmunds Regional Divorce Centre",
-        "courtNameCy": null,
-        "localAuthority": "Haringey Borough Council"
+        "courtNameCy": null
       },
       {
         "slug": "newport-south-wales-regional-divorce-centre",
         "catchmentType": "regional",
         "courtName": "Newport (South Wales) Regional Divorce Centre",
-        "courtNameCy": null,
-        "localAuthority": "Reading Borough Council"
+        "courtNameCy": null
       },
       {
         "slug": "north-west-regional-divorce-centre",
         "catchmentType": "regional",
         "courtName": "North West Regional Divorce Centre ",
-        "courtNameCy": null,
-        "localAuthority": "Hackney Borough Council"
+        "courtNameCy": null
       }
     ]
   },
@@ -38,22 +35,100 @@
         "slug": "bury-st-edmunds-regional-divorce-centre",
         "catchmentType": "regional",
         "courtName": "Bury St Edmunds Regional Divorce Centre",
-        "courtNameCy": null,
-        "localAuthority": "Haringey Borough Council"
+        "courtNameCy": null
       },
       {
         "slug": "newport-south-wales-regional-divorce-centre",
         "catchmentType": "regional",
         "courtName": "Newport (South Wales) Regional Divorce Centre",
-        "courtNameCy": null,
-        "localAuthority": "Reading Borough Council"
+        "courtNameCy": null
       },
       {
         "slug": "north-west-regional-divorce-centre",
         "catchmentType": "regional",
         "courtName": "North West Regional Divorce Centre ",
-        "courtNameCy": null,
-        "localAuthority": "Hackney Borough Council"
+        "courtNameCy": null
+      }
+    ]
+  },
+  {
+    "name": "Money claims",
+    "description": "Claims for when you are owed money or responding to money claims against you.",
+    "slug": "money-claims",
+    "serviceAreaType": "Civil",
+    "onlineUrl": "https://www.gov.uk/make-money-claim",
+    "onlineText": "Make a money claim online",
+    "serviceAreaCourts": [
+      {
+        "slug": "county-court-money-claims-centre-ccmcc",
+        "catchmentType": "national",
+        "courtName": "County Court Money Claims Centre (CCMCC)"
+      }
+    ]
+  },
+  {
+    "name": "Bankruptcy",
+    "description": "Opposing a bankruptcy petition, support for a person at risk of violence order, cancelling a bankruptcy.",
+    "slug": "bankruptcy",
+    "serviceAreaType": "Civil",
+    "onlineUrl": "https://www.gov.uk/apply-for-bankruptcy",
+    "onlineText": null,
+    "serviceAreaCourts": []
+  },
+  {
+    "name": "Housing",
+    "description": "Tenant evictions and rent or mortgage disputes.",
+    "slug": "housing",
+    "serviceAreaType": "Civil",
+    "onlineUrl": "https://www.gov.uk/possession-claim-online-recover-property",
+    "onlineText": "Make or respond to a possession claim online",
+    "serviceAreaCourts": []
+  },
+  {
+    "name": "Benefits",
+    "description": "Appealing entitlement to benefits such as Personal Independence Payment (PIP), Employment and Support Allowance (ESA) or Universal Credit.",
+    "slug": "benefits",
+    "serviceAreaType": null,
+    "onlineUrl": "https://www.gov.uk/appeal-benefit-decision/submit-appeal",
+    "onlineText": "Appeal a benefits decision online",
+    "serviceAreaCourts": [
+      {
+        "slug": "social-security-and-child-support-appeals-service-centre",
+        "catchmentType": "national",
+        "courtName": "Social Security and Child Support Appeals Service Centre"
+      }
+    ]
+  },
+  {
+    "name": "Claims against employers",
+    "description": "Appealing a decision about employment disputes related to pay, unfair dismissal and discrimination.",
+    "slug": "claims-against-employers",
+    "serviceAreaType": null,
+    "onlineUrl": "",
+    "onlineText": null,
+    "serviceAreaCourts": []
+  },
+  {
+    "name": "Tax",
+    "description": "Appealing a tax decision.",
+    "slug": "tax",
+    "serviceAreaType": null,
+    "onlineUrl": "",
+    "onlineText": null,
+    "serviceAreaCourts": []
+  },
+  {
+    "name": "Minor criminal offences",
+    "description": "TV licence fines, speeding or parking fines.",
+    "slug": "minor-criminal-offences",
+    "serviceAreaType": null,
+    "onlineUrl": "",
+    "onlineText": null,
+    "serviceAreaCourts": [
+      {
+        "slug": "minor-criminal-offences-service-centre",
+        "catchmentType": "national",
+        "courtName": "Minor Criminal Offences Service Centre"
       }
     ]
   }
