--- a/api/service-areas.json
+++ b/api/service-areas.json
@@ -1,135 +1,158 @@
 [
   {
-    "name": "Probate",
+    "name": "Divorce",
     "description": "Ending a marriage, getting a legal separation or help with money, property and children during a divorce.",
-    "slug": "probate",
-    "serviceAreaType": "Family",
+    "slug": "divorce",
+    "serviceAreaType": "family",
+    "onlineUrl": "https://www.gov.uk/apply-for-divorce",
+    "onlineText": "Apply for a divorce online",
+    "areaOfLawName": "Divorce",
     "serviceAreaCourts": [
       {
         "slug": "bury-st-edmunds-regional-divorce-centre",
         "catchmentType": "regional",
-        "courtName": "Bury St Edmunds Regional Divorce Centre",
-        "courtNameCy": null
+        "courtName": "Bury St Edmunds Regional Divorce Centre"
       },
       {
-        "slug": "newport-south-wales-regional-divorce-centre",
-        "catchmentType": "regional",
-        "courtName": "Newport (South Wales) Regional Divorce Centre",
-        "courtNameCy": null
-      },
-      {
-        "slug": "north-west-regional-divorce-centre",
-        "catchmentType": "regional",
-        "courtName": "North West Regional Divorce Centre ",
-        "courtNameCy": null
+        "slug": "divorce-service-centre",
+        "catchmentType": "national",
+        "courtName": "Divorce Service Centre"
       }
-    ]
+    ],
+    "text": null
   },
   {
     "name": "Civil partnership",
     "description": "Ending a civil partnership.",
     "slug": "civil-partnership",
-    "serviceAreaType": "Family",
+    "serviceAreaType": "family",
+    "onlineUrl": "",
+    "onlineText": null,
+    "areaOfLawName": "Civil partnership",
     "serviceAreaCourts": [
       {
         "slug": "bury-st-edmunds-regional-divorce-centre",
         "catchmentType": "regional",
-        "courtName": "Bury St Edmunds Regional Divorce Centre",
-        "courtNameCy": null
+        "courtName": "Bury St Edmunds Regional Divorce Centre"
       },
       {
-        "slug": "newport-south-wales-regional-divorce-centre",
-        "catchmentType": "regional",
-        "courtName": "Newport (South Wales) Regional Divorce Centre",
-        "courtNameCy": null
-      },
-      {
-        "slug": "north-west-regional-divorce-centre",
-        "catchmentType": "regional",
-        "courtName": "North West Regional Divorce Centre ",
-        "courtNameCy": null
+        "slug": "divorce-service-centre",
+        "catchmentType": "national",
+        "courtName": "Divorce Service Centre"
       }
-    ]
+    ],
+    "text": "We manage applications to dissolve a civil partnership at our central service centre."
   },
   {
     "name": "Money claims",
     "description": "Claims for when you are owed money or responding to money claims against you.",
     "slug": "money-claims",
-    "serviceAreaType": "Civil",
+    "serviceAreaType": "civil",
     "onlineUrl": "https://www.gov.uk/make-money-claim",
     "onlineText": "Make a money claim online",
+    "areaOfLawName": "Money claims",
     "serviceAreaCourts": [
       {
         "slug": "county-court-money-claims-centre-ccmcc",
         "catchmentType": "national",
         "courtName": "County Court Money Claims Centre (CCMCC)"
       }
-    ]
+    ],
+    "text": "We manage your money claims applications at our central service centre."
+  },
+  {
+    "name": "Probate",
+    "description": "Applying for probate, storing a will, settlement and disputes over a deceased person's property, money and possessions",
+    "slug": "probate",
+    "serviceAreaType": "family",
+    "onlineUrl": "https://www.gov.uk/applying-for-probate/apply-for-probate",
+    "onlineText": "Apply for probate online",
+    "areaOfLawName": "Probate",
+    "serviceAreaCourts": [
+      {
+        "slug": "probate-service-centre",
+        "catchmentType": "national",
+        "courtName": "Probate Service Centre"
+      }
+    ],
+    "text": "We manage your probate applications at our central service centre."
   },
   {
     "name": "Bankruptcy",
     "description": "Opposing a bankruptcy petition, support for a person at risk of violence order, cancelling a bankruptcy.",
     "slug": "bankruptcy",
-    "serviceAreaType": "Civil",
+    "serviceAreaType": "civil",
     "onlineUrl": "https://www.gov.uk/apply-for-bankruptcy",
     "onlineText": null,
-    "serviceAreaCourts": []
+    "areaOfLawName": "Bankruptcy",
+    "serviceAreaCourts": [],
+    "text": null
   },
   {
     "name": "Housing",
     "description": "Tenant evictions and rent or mortgage disputes.",
     "slug": "housing",
-    "serviceAreaType": "Civil",
+    "serviceAreaType": "civil",
     "onlineUrl": "https://www.gov.uk/possession-claim-online-recover-property",
     "onlineText": "Make or respond to a possession claim online",
-    "serviceAreaCourts": []
+    "areaOfLawName": "Housing possession",
+    "serviceAreaCourts": [],
+    "text": null
   },
   {
     "name": "Benefits",
     "description": "Appealing entitlement to benefits such as Personal Independence Payment (PIP), Employment and Support Allowance (ESA) or Universal Credit.",
     "slug": "benefits",
-    "serviceAreaType": null,
+    "serviceAreaType": "other",
     "onlineUrl": "https://www.gov.uk/appeal-benefit-decision/submit-appeal",
     "onlineText": "Appeal a benefits decision online",
+    "areaOfLawName": "Social security",
     "serviceAreaCourts": [
       {
         "slug": "social-security-and-child-support-appeals-service-centre",
         "catchmentType": "national",
         "courtName": "Social Security and Child Support Appeals Service Centre"
       }
-    ]
+    ],
+    "text": "We manage benefits appeals at our central service centre."
   },
   {
     "name": "Claims against employers",
     "description": "Appealing a decision about employment disputes related to pay, unfair dismissal and discrimination.",
     "slug": "claims-against-employers",
-    "serviceAreaType": null,
+    "serviceAreaType": "other",
     "onlineUrl": "",
     "onlineText": null,
-    "serviceAreaCourts": []
+    "areaOfLawName": "Employment",
+    "serviceAreaCourts": [],
+    "text": null
   },
   {
     "name": "Tax",
     "description": "Appealing a tax decision.",
     "slug": "tax",
-    "serviceAreaType": null,
+    "serviceAreaType": "other",
     "onlineUrl": "",
     "onlineText": null,
-    "serviceAreaCourts": []
+    "areaOfLawName": "Tax",
+    "serviceAreaCourts": [],
+    "text": null
   },
   {
     "name": "Minor criminal offences",
     "description": "TV licence fines, speeding or parking fines.",
     "slug": "minor-criminal-offences",
-    "serviceAreaType": null,
+    "serviceAreaType": "other",
     "onlineUrl": "",
     "onlineText": null,
+    "areaOfLawName": "Minor crime",
     "serviceAreaCourts": [
       {
         "slug": "minor-criminal-offences-service-centre",
         "catchmentType": "national",
         "courtName": "Minor Criminal Offences Service Centre"
       }
-    ]
+    ],
+    "text": "We manage minor criminal offences at our central service centre."
   }
 ]
