--- a/charts/fact-frontend/values.yaml
+++ b/charts/fact-frontend/values.yaml
@@ -1,7 +1,8 @@
 nodejs:
   applicationPort: 3100
-  cpuRequests: 50m
+  cpuRequests: 1500m
   memoryRequests:   256Mi
+  memoryLimits: 1024Mi
   aadIdentityName: fact
   keyVaults:
     fact:
