FACT-180: Change referer policy and update controllers to use back path

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,7 +1,7 @@
 app:
   useCSRFProtection: 'true'
   security:
-    referrerPolicy: 'origin'
+    referrerPolicy: 'same-origin'
 services:
   frontend:
     name: 'FACT Frontend'
