--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cichecks": "yarn && yarn build && yarn lint && yarn test"
   },
   "dependencies": {
-    "@hmcts/fact-cookie-manager": "github:hmcts/fact-cookie-manager#0.0.1",
+    "@hmcts/cookie-manager": "github:hmcts/cookie-manager#0.0.3",
     "@hmcts/info-provider": "^1.0.0",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/nodejs-logging": "^3.0.1",
