--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.language=typescript
 sonar.sources=src/main/controllers,src/main/utils
 sonar.tests=src/test
 sonar.test.exclusions=test/coverage/**
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.exclusions=src/main/app.ts,src/main/development.ts,src/main/modules/**/*.ts,src/main/server.ts
