--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:coverage": "jest --coverage -c jest.coverage.config.js",
     "test:a11y": "echo 'nope' && exit 0",
     "test:pa11y": "NODE_TLS_REJECT_UNAUTHORIZED=0 jest -c jest.a11y.config.js --maxWorkers 15",
-    "test:cucumber": "NODE_TLS_REJECT_UNAUTHORIZED=0 cucumber-js --parallel=8 --retry 3",
+    "test:cucumber": "NODE_TLS_REJECT_UNAUTHORIZED=0 cucumber-js --parallel=8 --retry=3",
     "sonar-scan": "sonar-scanner",
     "test:smoke": "jest -c jest.smoke.config.js",
     "test:functional": "yarn test:cucumber && yarn test:pa11y",
@@ -91,7 +91,7 @@
     "eslint": "^6.8.0",
     "html-webpack-plugin": "^4.5.2",
     "jest": "^25.1.0",
-    "mini-css-extract-plugin": "^1.6.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "nock": "^13.0.4",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
