modifications to url

--- a/charts/fact-frontend/values.yaml
+++ b/charts/fact-frontend/values.yaml
@@ -15,7 +15,7 @@ nodejs:
   environment:
     FRONTEND_URL: "https://fact.{{ .Values.global.environment }}.platform.hmcts.net"
     FACT_API_URL: "http://fact-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
-    IMAGE_BASE_URL: "https://fact{{ .Values.global.environment }}.blob.core.windows.net/images/"
+    IMAGE_BASE_URL: "https://fact{{ .Values.global.environment }}.blob.core.windows.net/images"
     TEST: 7
   autoscaling:        # Default is false
     enabled: true
