--- a/package.json
+++ b/package.json
@@ -122,6 +122,9 @@
     "uglifyjs-webpack-plugin/serialize-javascript": "^3.1.0",
     "copy-webpack-plugin/glob-parent": "^5.1.2",
     "node-sass/node-gyp/tar": "^4.4.18",
-    "webpack/watchpack/watchpack-chokidar2/chokidar/glob-parent": "^5.1.2"
-  }
+    "webpack/watchpack/watchpack-chokidar2/chokidar/glob-parent": "^5.1.2",
+    "axios/follow-redirects": "^1.14.7",
+    "@types/http-proxy-middleware/http-proxy-middleware/follow-redirects": "^1.14.7",
+    "@types/http-proxy-middleware/http-proxy/follow-redirects": "^1.14.7"
+}
 }
