--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=14.0.0"
   },
   "scripts": {
     "start": "NODE_ENV=production ./node_modules/.bin/ts-node -r tsconfig-paths/register src/main/server.ts",
@@ -82,36 +82,36 @@
     "@typescript-eslint/parser": "^2.19.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
-    "chai": "^4.2.0",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.5.1",
     "cucumber": "^6.0.5",
     "debug": "^4.3.2",
     "eslint": "^6.8.0",
-    "html-webpack-plugin": "^4.5.2",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^25.1.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^2.5.2",
     "nock": "^13.0.4",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "nodemon": "^2.0.2",
     "pa11y": "^5.3.0",
     "puppeteer": "^10.0.0",
     "request": "^2.88.0",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^10.2.1",
-    "sinon": "^9.2.4",
+    "sass-loader": "^12.4.0",
+    "sinon": "^13.0.1",
     "sinon-chai": "^3.4.0",
     "sonar-scanner": "^3.1.0",
-    "style-loader": "^1.1.3",
+    "style-loader": "^3.3.1",
     "supertest": "^6.1.6",
     "ts-jest": "^25.2.1",
     "ts-loader": "^9.2.1",
     "tslint": "5.20.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-middleware": "^5.0.0",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
@@ -124,6 +124,9 @@
     "node-sass/node-gyp/tar": "^4.4.18",
     "webpack/watchpack/watchpack-chokidar2/chokidar/glob-parent": "^5.1.2",
     "axios/follow-redirects": "^1.14.7",
-    "@types/http-proxy-middleware/http-proxy-middleware/http-proxy/follow-redirects": "^1.14.7"
+    "@types/http-proxy-middleware/http-proxy-middleware/http-proxy/follow-redirects": "^1.14.7",
+    "sass-lint/eslint/shelljs": ">=0.8.5",
+    "applicationinsights/@azure/core-http/node-fetch": ">=2.6.7",
+    "puppeteer/node-fetch": ">=2.6.7"
   }
 }
