--- a/package.json
+++ b/package.json
@@ -115,21 +115,17 @@
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
-    "express-nunjucks/nunjucks-async-loader/chokidar/glob-parent": "5.1.2",
     "sass-lint/merge": "^2.1.1",
     "node-sass/meow/trim-newlines": "^4.0.1",
-    "nodemon/update-notifier/latest-version/package-json/got/cacheable-request/normalize-url": "^6.0.1",
     "mini-css-extract-plugin/normalize-url": "^6.0.1",
     "html-webpack-plugin/pretty-error": "^3.0.4",
     "uglifyjs-webpack-plugin/serialize-javascript": "^3.1.0",
-    "launchdarkly-node-server-sdk/launchdarkly-eventsource/original/url-parse": "^1.5.2",
-    "copy-webpack-plugin/cacache/ssri": "^8.0.1",
-    "webpack/watchpack/watchpack-chokidar2/chokidar/glob-parent": "^5.1.2",
-    "copy-webpack-plugin/cacache/tar": "^6.1.11",
+    "copy-webpack-plugin/glob-parent": "^5.1.2",
     "node-sass/node-gyp/tar": "^4.4.18",
+    "webpack/watchpack/watchpack-chokidar2/chokidar/glob-parent": "^5.1.2",
     "axios/follow-redirects": "^1.14.7",
-    "@azure/storage-blob/@azure/core-http/node-fetch": "^2.6.7",
-    "sass-lint/eslint/shelljs": "^0.8.5",
-    "puppeteer/node-fetch": "^2.6.7"
+    "@types/http-proxy-middleware/http-proxy-middleware/http-proxy/follow-redirects": "^1.14.7",
+    "sass-lint/eslint/shelljs": ">=0.8.5",
+    "puppeteer/node-fetch": ">=2.6.7"
   }
 }
