--- a/package.json
+++ b/package.json
@@ -124,8 +124,10 @@
     "node-sass/node-gyp/tar": "^4.4.18",
     "webpack/watchpack/watchpack-chokidar2/chokidar/glob-parent": "^5.1.2",
     "axios/follow-redirects": "^1.14.7",
-    "@types/http-proxy-middleware/http-proxy-middleware/http-proxy/follow-redirects": "^1.14.7",
+    "@types/http-proxy-middleware/http-proxy-middleware/http-proxy/follow-redirects": "^1.14.8",
     "sass-lint/eslint/shelljs": ">=0.8.5",
-    "puppeteer/node-fetch": ">=2.6.7"
+    "puppeteer/node-fetch": ">=2.6.7",
+    "axiox/follow-redirects": ">=1.14.8",
+    "http-proxy-middleware/http-proxy/follow-redirects": ">=1.14.8"
   }
 }
