--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:pa11y": "NODE_TLS_REJECT_UNAUTHORIZED=0 jest -c jest.a11y.config.js --maxWorkers 15",
     "test:cucumber": "NODE_TLS_REJECT_UNAUTHORIZED=0 cucumber-js --parallel=8 --retry 3",
     "sonar-scan": "sonar-scanner",
+    "fortifyScan": "./java/gradlew -p java fortifyScan",
     "test:smoke": "jest -c jest.smoke.config.js",
     "test:functional": "yarn test:cucumber && yarn test:pa11y",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
