codecept working with testing script

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fortifyScan": "./java/gradlew -p java fortifyScan",
     "test:smoke": "jest -c jest.smoke.config.js",
     "test:functional": "yarn test:cucumber && yarn test:pa11y",
+    "test:codecepttest": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs --config ./src/test/functional/codecept.conf.js run --steps",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
     "cichecks": "yarn && yarn build && yarn lint && yarn test"
   },
@@ -48,7 +49,7 @@
     "autobind-decorator": "^2.4.0",
     "awilix": "^7.0.3",
     "axios": "^0.27.2",
-    "codeceptjs": "^3.3.7",
+    "codeceptjs": "^3.4.0",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
@@ -63,6 +64,7 @@
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "nunjucks": "^3.2.3",
+    "playwright": "^1.30.0",
     "require-directory": "^2.1.1",
     "serve-favicon": "^2.5.0",
     "ts-node": "10.9.1",
