--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@ node_modules/
 .sass-cache
 *.css
 
-./functional-output/*
-functional-output
-
 .idea/
 *.iml
 
@@ -33,3 +30,4 @@ public/
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+/functional-output/
