--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "sonar-scan": "sonar-scanner",
     "fortifyScan": "./java/gradlew -p java fortifyScan",
     "test:smoke": "jest -c jest.smoke.config.js",
-    "test:functionall": "npm-run-all -scl test:codecept test:functional:report test:pa11y",
-    "test:functional": "yarn test:codecept & yarn test:pa11y & yarn test:functional:report",
+    "test:functional": "npm-run-all -scl test:codecept test:functional:report test:pa11y",
     "test:functional:report": "allure generate functional-output/functional/reports/ -c -o functional-output/functional/allure",
     "test:codecept": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs --config ./src/test/functional/codecept.conf.js run-workers 4 parallel",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
