added back resolutions

--- a/package.json
+++ b/package.json
@@ -131,6 +131,8 @@
     "semver": ">=7.5.2",
     "follow-redirects": ">=1.15.4",
     "word-wrap": ">=1.2.4",
+    "ip": ">=2.0.1",
+    "axios": ">=0.28.0",
     "axios>follow-redirects": ">=1.15.4",
     "http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
     "@types/http-proxy-middleware>http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4"
