FACT-1947 fixing dependancies (#794)
* removed known issues
Please enter the commit message for your changes. Lines starting

* adding braces

* removed yarn known issues

* ip fixed

* info provider to 1.2.2

* fixed axios

* fixed express

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@hmcts/cookie-manager": "1.0.0",
-    "@hmcts/info-provider": "^1.1.0",
+    "@hmcts/info-provider": "^1.2.2",
     "@hmcts/nodejs-healthcheck": "^1.8.4",
     "@hmcts/nodejs-logging": "^4.0.4",
     "@hmcts/properties-volume": "^0.0.14",
@@ -51,7 +51,7 @@
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
-    "express": "^4.19.2",
+    "express": "4.21.0",
     "express-nunjucks": "^2.2.5",
     "glob-parent": "6.0.2",
     "govuk-frontend": "^4.8.0",
@@ -131,12 +131,12 @@
     "semver": ">=7.5.2",
     "follow-redirects": ">=1.15.6",
     "word-wrap": ">=1.2.4",
-    "ip": ">=2.0.1",
-    "axios": ">=0.28.0",
+    "ip": "https://registry.npmjs.org/neoip/-/neoip-2.1.0.tgz",
+    "axios": ">=1.7.7",
     "axios>follow-redirects": ">=1.15.4",
     "http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
     "@types/http-proxy-middleware>http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
-    "express": ">=4.19.2",
+    "express": "4.21.0",
     "micromatch": ">=4.0.8",
     "tar": ">=6.2.1",
     "braces": ">=3.0.3"
