--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "tcoe-playwright-example",
   "version": "1.0.0",
-  "main": "index.js",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "repository": "https://github.com/hmcts/tcoe-playwright-example.git",
   "author": "abigailflorence97 <abigail.smith@hmcts.net>",
   "license": "MIT",
   "devDependencies": {
     "@axe-core/playwright": "^4.10.0",
+    "@eslint/js": "^9.11.1",
     "@playwright/test": "^1.47.2",
     "@types/node": "^22.6.1",
-    "typescript": "^5.6.2"
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^9.11.1",
+    "eslint-plugin-playwright": "^1.6.2",
+    "globals": "^15.10.0",
+    "playwright-core": "^1.47.2",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   },
   "scripts": {
-    "lint": ""
+    "lint": "yarn tsc -p tsconfig.json && yarn eslint .",
+    "setup": "yarn playwright install && yarn playwright install msedge"
   },
   "packageManager": "yarn@4.5.0"
 }
