Page Object Model (#24)
* Adding POM

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,16 @@
 {
-  "extends": [
-    "config:base"
-  ],
-  "dependencyDashboardApproval": true
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["local>hmcts/.github:renovate-config"],
+  "major": {
+    "dependencyDashboardApproval": true
+  },
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch"],
+      "groupName": "All patch-minor dependencies",
+      "groupSlug": "All-minor-patch",
+      "addLabels": ["Renovate All-minor-patch"],
+      "automerge": true
+    }
+  ]
 }
