Fix yarn issues (#36)

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
-.pnp.cjs
-.pnp.loader.mjs
+.pnp.*
 .yarn/*
+!.yarn/releases
 .vscode/*
 .sessions/
