--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "jquery": "^3.7.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "nunjucks": ">=3.2.4",
+    "nunjucks": "^3.2.4",
     "require-directory": "^2.1.1",
     "serve-favicon": "^2.5.0",
     "ts-node": "^10.9.2",
@@ -74,7 +74,7 @@
     "@babel/preset-env": "^7.26.0",
     "@codeceptjs/allure-legacy": "^1.0.2",
     "@codeceptjs/configure": "^0.10.0",
-    "@playwright/test": "^1.48.2",
+    "@playwright/test": "^1.49.1",
     "@types/chai-as-promised": "^8.0.1",
     "@types/cucumber": "^7.0.3",
     "@types/jest": "^29.5.14",
@@ -105,7 +105,7 @@
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "pa11y": "^6.2.3",
-    "playwright": "1.30.0",
+    "playwright": "1.49.1",
     "request": "^2.88.2",
     "sass": "^1.82.0",
     "sass-lint": "^1.13.1",
