Exclude .nvmrc from renovate updates

--- a/renovate.json
+++ b/renovate.json
@@ -11,6 +11,10 @@
       "groupSlug": "All-minor-patch",
       "addLabels": ["Renovate All-minor-patch"],
       "automerge": true
+    },
+    {
+      "matchFiles": [".nvmrc"],
+      "enabled": false
     }
   ]
 }
