Visual tests for media viewer (#77)
* test pipelines with bumped node version

* Update linting config

* Add visual test scripts

* Citizen test

* Add example test with mask

* Add example test with clipping

* Regenerate screenshots

* Update docs

* Refactor fixture usage

* Adding visual tests for media viewer

* Add secrets for pipeline

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ export CITIZEN_FRONTEND_BASE_URL=
 export MANAGE_CASES_BASE_URL=
 export EXUI_USERNAME=
 export EXUI_PASSWORD=
+export CASEMANAGER_USERNAME=
+export CASEMANAGER_PASSWORD=
 export CITIZEN_USERNAME=
 export CITIZEN_PASSWORD=
