Example test for using multiple users in the same test (#80)
* Example test for using multiple users in the same test

* Update doc

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@ export EXUI_USERNAME=
 export EXUI_PASSWORD=
 export CASEMANAGER_USERNAME=
 export CASEMANAGER_PASSWORD=
+export JUDGE_USERNAME=
+export JUDGE_PASSWORD=
 export CITIZEN_USERNAME=
 export CITIZEN_PASSWORD=
