Use script to obtain secrets from vault (#81)
* Use script to obtain secrets from vault

* Add EOF

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-export CITIZEN_FRONTEND_BASE_URL=
-export MANAGE_CASES_BASE_URL=
-export EXUI_USERNAME=
-export EXUI_PASSWORD=
-export CASEMANAGER_USERNAME=
-export CASEMANAGER_PASSWORD=
-export JUDGE_USERNAME=
-export JUDGE_PASSWORD=
-export CITIZEN_USERNAME=
-export CITIZEN_PASSWORD=
+# If adding a new value, ensure the key vault is updated and tagged with "e2e": "ENV_VAR_NAME"
+
+# EXUI users
+SOLICITOR_USERNAME=
+SOLICITOR_PASSWORD=
+CASEMANAGER_USERNAME=
+CASEMANAGER_PASSWORD=
+JUDGE_USERNAME=
+JUDGE_PASSWORD=
+
+# Citizen user
+CITIZEN_USERNAME=
+CITIZEN_PASSWORD=
