Do not include visual tests in nightly run

--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "scripts": {
     "lint": "yarn tsc -p tsconfig.json && yarn eslint .",
     "setup": "yarn playwright install",
-    "test:chrome": "yarn playwright test tests/ --project=chrome --grep-invert='(@a11y)|(@performance)'",
-    "test:firefox": "yarn playwright test tests/ --project=firefox --grep-invert='(@a11y)|(@performance)'",
-    "test:webkit": "yarn playwright test tests/ --project=webkit --grep-invert='(@a11y)|(@performance)'",
-    "test:edge": "yarn playwright test tests/ --project=edge --grep-invert='(@a11y)|(@performance)'",
-    "test:tabletchrome": "yarn playwright test tests/ --project=tabletchrome --grep-invert='(@a11y)|(@performance)'",
-    "test:tabletwebkit": "yarn playwright test tests/ --project=tabletwebkit --grep-invert='(@a11y)|(@performance)'",
+    "test:chrome": "yarn playwright test tests/ --project=chrome --grep-invert='(@a11y)|(@performance)|(@visual)'",
+    "test:firefox": "yarn playwright test tests/ --project=firefox --grep-invert='(@a11y)|(@performance)|(@visual)'",
+    "test:webkit": "yarn playwright test tests/ --project=webkit --grep-invert='(@a11y)|(@performance)|(@visual)'",
+    "test:edge": "yarn playwright test tests/ --project=edge --grep-invert='(@a11y)|(@performance)|(@visual)'",
+    "test:tabletchrome": "yarn playwright test tests/ --project=tabletchrome --grep-invert='(@a11y)|(@performance)|(@visual)'",
+    "test:tabletwebkit": "yarn playwright test tests/ --project=tabletwebkit --grep-invert='(@a11y)|(@performance)|(@visual)'",
     "test:a11y": "yarn playwright test tests/ --grep @a11y --project=chrome",
     "test:visual": "yarn playwright test tests/ --grep @visual --project=chrome",
     "test:update-snapshots": "yarn playwright test tests/ --grep @visual --project=chrome --update-snapshots"
